# 2020

./: .gitignore  README.md  package-lock.json
_scripts/: 2020
app/: App.vue  package-lock.json  package.json
app/components/: header.vue  status-bar.vue
client/: capacitor.config.json  package-lock.json  package.json
client/src/components/: Books.vue  Login.vue  MoodTracker.vue  Ping.vue  Question.vue
client/src/components/scripts/: Books.js  Question.js
client/src/router/: index.js
server/: .env  README.md  app.py  bq_load_books_data.py  config.py  env_vars.py  pyproject.toml  settings.py
server/bigquery/: bq_operations.py
src/flask_app/: pyproject.toml
src/flask_app/client/: package-lock.json
src/flask_app/client/src/components/: Ping.vue
