[tool.poetry]
name = "flask_app"
version = "0.1.0"
description = ""
authors = ["Daniel Le <ledanieln@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask-Cors = "^3.0.8"
Flask = "^1.1.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^5.3.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
